--- a/style.css
+++ b/style.css
@@ -30,3 +30,17 @@ body {
     justify-items: center;
     align-items: center;
 }
+
+.result-score {
+    margin-left: .1rem;
+    font-size: 3.5rem; 
+}
+
+.result-selection {
+  opacity: .5;
+}
+
+.result-selection.winner {
+  opacity: 1;
+  font-size: 5.5rem;
+  }
